@@ -1,3 +1,7 @@
+[B]Version 1.6.0: April 4th, 2012[/B]
+- New show: TORked
+- Highlighting the most recent and live show titles
+
 [B]Version 1.4.1: January 30th, 2012[/B]
 - Initial XBMC Eden release
 - Fix for thumbnail support
